2016-01-13  Jim Fowler  <jrf@Biblion>

	* Tools/collection/author.py (AuthorView): Write author class
	and tested.

	* Tools/collection/library.py
	(collectionDB.getBooksAssociatedByAuthor): Got query for
	getBooksAssociatedByAuthor() working.

	* Data/Authors.txt: removed timestamp 0:00:00 from all dates.

2016-01-10  Jim Fowler  <jrf@Biblion>

	* Tools/collection/tasks.py: Added task viewer.

	* Tools/collection/library.py
	(collectionDB.getBooksPublishedByVendor): Got query for
	getBooksPublishedByVendor() and getBooksPurchasedFromVendor()
	working today.

	* Tools/collection/vendor.py: started working on the
	vendor/publisher code. Cloned from projects.py

	* Tools/collection/designer/ui_vendor.ui: created dialog
	window for vendor/publisher views.

2016-01-09  Jim Fowler  <jrf@Biblion>

	* Tools/scripts/CreateTables.sql: Changed Vendor table field from
	MailingCounty to MailingCountry. Likewise for Shipping address.

2015-12-28  Jim Fowler  <jrf@Biblion>

	* Tools/collection/library.py: Correction __main__ tests.

	* Tools/collection/mainWindow.py (Collection.__init__): changed to
	import library.py instead of sql.py

	* Tools/collection/library.py: changed sql.py to library.py

	* Tools: rename books to librarian. Update setup.py. Also rename
	Collection.db3 to CardCatalog.db3

	* Tools/collection/sql.py (collectionDB.getBooksInProject): Worked
	out Books-in-Project search for both the Mac and Ubuntu.  Had and
	earlier version of sqlite3 on the Mac.  Once it was upgraded the
	problems went away.

2015-12-13  Jim Fowler  <jrf@Biblion>

	* Tools/collection/project.py (ProjectView.delete): Added query
	and commit when deleting.

2015-12-12  Jim Fowler  <jrf@Biblion>

	* Tools/scripts/CreateTables.sql: Changed all DATE to TEXT
	and FLOAT to REAL per sqlite3 documentation.

	* Tools/collection/database.py (DataBase.commit): Added commit
	method.  Changes were not being saved in the database file.

2015-12-07  Jim Fowler  <jrf@Biblion>
