@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Author Info</string>
   </property>
   <widget class="QLabel" name="titleLabel">
    <property name="geometry">
@@ -34,7 +34,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lastName">
+  <widget class="QLineEdit" name="lastNameEdit">
    <property name="geometry">
     <rect>
      <x>120</x>
@@ -46,6 +46,8 @@
    <property name="font">
     <font>
      <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
   </widget>
@@ -89,7 +91,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Middle Name:</string>
+    <string>Middle Names:</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -118,7 +120,7 @@
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="middleName">
+  <widget class="QLineEdit" name="firstNameEdit">
    <property name="geometry">
     <rect>
      <x>120</x>
@@ -130,10 +132,12 @@
    <property name="font">
     <font>
      <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
   </widget>
-  <widget class="QLineEdit" name="middleName_2">
+  <widget class="QLineEdit" name="middleNameEdit">
    <property name="geometry">
     <rect>
      <x>120</x>
@@ -145,6 +149,8 @@
    <property name="font">
     <font>
      <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
   </widget>
@@ -206,6 +212,8 @@
    <property name="font">
     <font>
      <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
   </widget>
@@ -227,48 +235,9 @@
    <property name="font">
     <font>
      <pointsize>12</pointsize>
-    </font>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="saveButton">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>410</y>
-     <width>101</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
-   </property>
-   <property name="text">
-    <string>Save Entry</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="quit_Button">
-   <property name="geometry">
-    <rect>
-     <x>510</x>
-     <y>410</y>
-     <width>101</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Ubuntu</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Close</string>
    </property>
   </widget>
   <widget class="QTabWidget" name="tabWidget">
@@ -309,7 +278,7 @@
     <attribute name="title">
      <string>Books</string>
     </attribute>
-    <widget class="QListWidget" name="booksList">
+    <widget class="QListWidget" name="bookList">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -321,17 +290,118 @@
     </widget>
    </widget>
   </widget>
+  <widget class="QLabel" name="idLabel">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>60</y>
+     <width>70</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="deleteButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>420</y>
+     <width>121</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Delete Author</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="newButton">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>420</y>
+     <width>101</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>New Author</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="closeButton">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>420</y>
+     <width>101</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Close</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="saveButton">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>420</y>
+     <width>101</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Save Author</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
-  <tabstop>lastName</tabstop>
-  <tabstop>middleName</tabstop>
-  <tabstop>middleName_2</tabstop>
+  <tabstop>lastNameEdit</tabstop>
+  <tabstop>firstNameEdit</tabstop>
+  <tabstop>middleNameEdit</tabstop>
   <tabstop>bornEdit</tabstop>
   <tabstop>diedEdit</tabstop>
   <tabstop>tabWidget</tabstop>
   <tabstop>commentsEdit</tabstop>
-  <tabstop>saveButton</tabstop>
-  <tabstop>quit_Button</tabstop>
  </tabstops>
  <resources/>
  <connections/>
